--- a/style.css
+++ b/style.css
@@ -137,22 +137,20 @@ img,
 
     aside {
         display: flex;
-        margin-top: 0;
+        margin-top: 20px;
         align-items: center;
     }
 
     .links {
-       display: block;
         position: relative;
-        top: 81px;
-        left: 116px;
+        top: 82px;
+        left: 97px;
         overflow: hidden;
-        max-height: 0px;
     }
 
     a {
         display: block;
-        font-size: 13px;
+        font-size: 10px;
         margin-top: 10px;
         text-decoration: none;
         margin-left: 20px;
@@ -166,7 +164,7 @@ img,
     .menu {
         display: block;
         width: 35px;
-        /* margin-right: 134px; */
+        margin-top: 20px;
     }
 
     main {
