--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ h1 {
     margin-top: 100px;
     margin-left: 100px;
     font-style: italic;
+    font-weight: 900;
 }
 
 h2 {
@@ -135,6 +136,14 @@ img,
 
 @media (min-width: 350px) and (max-width: 767px) {
 
+    body {
+        background: rgb(54, 44, 44);
+        background-image: url(/assets/logo-airmax.PNG);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 200px;
+    }
+
     aside {
         display: flex;
         margin-top: 20px;
@@ -146,6 +155,7 @@ img,
         top: 82px;
         right: 95px;
         overflow: hidden;
+        transition: all 1.5s ease-in-out;
     }
 
     a {
@@ -157,8 +167,7 @@ img,
 
 
     #logo {
-        display: none;
-        /* width: 52px; */
+       display: none;
     }
 
     .menu {
@@ -166,6 +175,7 @@ img,
         width: 35px;
         margin-top: 20px;
         margin-left: 120px;
+        transition: all 0.5s ease-in-out;
     }
 
     main {
@@ -174,26 +184,31 @@ img,
     }
 
     h1 {
-        font-size: 50px;
+        font-size: 70px;
         margin-left: 54px;
         margin-top: 146px;
     }
 
     h2 {
-        font-size: 22px;
+        font-size: 24px;
         margin-left: 60px;
+        opacity: 0.6;
+        width: 13em;
+        font-weight: 600;
     }
 
     p {
         letter-spacing: 0;
-        margin-left: 30px;
-        font-size: 13px;
-        width: 300px;
+        font-size: 15px;
+        width: 311px;
+        line-height: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     section {
         display: block;
-        width: 75%;
     }
 
     button {
@@ -202,6 +217,10 @@ img,
         font-size: 10px;
         border-radius: 10px;
         margin-bottom: 30px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        color: black;
     }
 
     .imgsInferiores {
