--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ img,
 
     body {
         background: rgb(54, 44, 44);
-        background-image: url(/assets/logo-airmax.PNG);
+        background-image: url(./assets/logo-airmax.PNG);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 300px;
